# epidemic-models

./: Aufgabe.ipynb  README.md  pyproject.toml
epidemic_models/: drawing.py  simulation.py
epidemics/: drawing.py  parametersets.py  simulation.py
