[tool.poetry]
name = "epidemic-models"
description = """Excerise for the "Programmiersprachen zur Datenanalyse" course at FH Bielefeld"""
version = "0.0.1"
readme = "README.md"
license = "MIT"
authors = ["Daniel Kappe <daniel.kappe@fh-bielefeld.de>"]
packages = [{include = "epidemics"}]

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^2.0.5"
numpy = "^1.24.2"
jupyterlab = "^3.6.3"
pygame = "^2.3.0"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
black = "^23.3.0"
ruff = "^0.0.260"
coverage = "^7.2.2"
pre-commit = "^3.2.1"

[tool.ruff]
select = [ "F", "E", "I", "N", "RET", "ARG" ]
ignore = [ "E501" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
